prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/fp_exp_expected.diag.txt
ERROR: exponent expected
testData/diagnostics/compilation_errors/lex_errors/fp_exp_expected.nut:2:8

// EXPECT_ERROR: "exponent expected"
let x = 1.0e
        ^---


